fix on iphone se

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,7 +6,7 @@
   text-align: center ;
   margin-bottom: 0.75em;
   a {
-    margin-left: 0.75em;
+    margin-left: 0.5em;
   }
   i {
     font-size: 28px;
